# verilog

./: LICENSE  README.md  verilog.cabal
Data/: BitVec.hs
Language/: Verilog.hs
Language/Verilog/: AST.hs  DSL.hs  Lex.x  Lexer.x  Netlist.hs  NetlistConvert.hs  Parse.hs  Parser.hs  Preprocess.hs  Preprocessor.hs  Simulator.hs  Tokens.hs  Types.hs
Language/Verilog/Parser/: Lex.x  Parse.y  Preprocess.hs  Tokens.hs
Language/Verilog/Simulator/: ANF.hs  ANormalize.hs  Compile.hs  Run.hs  Sim.hs
compiler/: Inline.hs  Main.hs
