name:    verilog
version: 0.0.3

category: Language, Hardware, Embedded

synopsis: A Verilog parser and simulator.

description:
  A parser and simulator supporting a very small subset of Verilog-95.
  Intended for machine generated, synthesizable code.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://github.com/tomahawkins/verilog

build-type:    Simple
cabal-version: >= 1.8

library
  build-depends:
    base       >= 4.0   && < 5.0,
    array      >= 0.4   && < 5.0,
    mtl        >= 2.0   && < 3.0,
    polyparse  >= 1.4   && < 2.0,
    vcd        >= 0.3.0 && < 0.4

  exposed-modules:
    Data.BitVec
    Language.Verilog
    Language.Verilog.AST
    Language.Verilog.Parser
    Language.Verilog.Parser.Lex
    Language.Verilog.Parser.Preprocess
    Language.Verilog.Parser.Tokens
    Language.Verilog.Simulator
    Language.Verilog.Simulator.ANF
    Language.Verilog.Simulator.Compile

  extensions:

  ghc-options: -W

source-repository head
  type:     git
  location: git://github.com/tomahawkins/verilog.git

